Fix GitHub username references
- Updated footer link in arxiv_scraper.py from yourusername to robynlm
- Fixed README.md GitHub Pages URL and clone instructions
- Updated template.html, test_setup.py, and preview.html references
- Regenerated index.html with correct GitHub link

--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
     <div class="container">
         <div class="header">
             <h1>Numerical Relativity Papers</h1>
-            <div class="last-updated">Last updated: 2025-07-17 14:52:55 UTC</div>
+            <div class="last-updated">Last updated: 2025-07-17 15:34:04 UTC</div>
         </div>
         
         <main>
@@ -544,7 +544,7 @@
         <footer class="footer">
             <p>
                 Generated automatically from arXiv.org • 
-                <a href="https://github.com/yourusername/UKNR_papers" class="github-link" target="_blank" rel="noopener">
+                <a href="https://github.com/robynlm/UKNR_papers" class="github-link" target="_blank" rel="noopener">
                     View on GitHub
                 </a>
             </p>
