--- a/preview.html
+++ b/preview.html
@@ -327,7 +327,7 @@
         <footer class="footer">
             <p>
                 Generated automatically from arXiv.org • 
-                <a href="https://github.com/yourusername/UKNR_papers" class="github-link" target="_blank" rel="noopener">
+                <a href="https://github.com/robynlm/UKNR_papers" class="github-link" target="_blank" rel="noopener">
                     View on GitHub
                 </a>
             </p>
