--- a/template.html
+++ b/template.html
@@ -132,14 +132,14 @@
                 <li>Push this repository to GitHub</li>
                 <li>Enable GitHub Pages in repository settings</li>
                 <li>Enable GitHub Actions</li>
-                <li>Your page will be available at: <span class="code">https://yourusername.github.io/UKNR_papers/</span></li>
+                <li>Your page will be available at: <span class="code">https://robynlm.github.io/UKNR_papers/</span></li>
             </ol>
         </div>
         
         <footer class="footer">
             <p>
                 Generated automatically from arXiv.org • 
-                <a href="https://github.com/yourusername/UKNR_papers" class="github-link" target="_blank" rel="noopener">
+                <a href="https://github.com/robynlm/UKNR_papers" class="github-link" target="_blank" rel="noopener">
                     View on GitHub
                 </a>
             </p>
