Include extra author

--- a/index.html
+++ b/index.html
@@ -292,10 +292,25 @@
     <div class="container">
         <div class="header">
             <h1>Numerical Relativity Papers</h1>
-            <div class="last-updated">Last updated: 2025-12-16 06:37:08 UTC</div>
+            <div class="last-updated">Last updated: 2025-12-16 11:38:36 UTC</div>
         </div>
         
         <main>
+
+            <article class="paper">
+                <div class="paper-date">15 December 2025</div>
+                <div class="paper-title">
+                    <a href="https://arxiv.org/abs/2512.13673v1" target="_blank" rel="noopener">A critical value of the inflationary tensor-to-scalar ratio from inhomogeneous inflation</a>
+                </div>
+                <div class="abstract-section">
+                    <div class="abstract-toggle">
+                        <span class="arrow">▶</span>
+                        <span>Abstract</span>
+                    </div>
+                </div>
+                <div class="paper-authors">Panagiotis Giannadakis, Matthew Elley, Raphael Flauger, Eugene A. Lim</div>
+                <div class="paper-abstract">We show that, for a given fixed value of the number of e-folds of the homogeneous solution, inflation succeeds with order unity inhomogeneities in the initial conditions above a characteristic value of the tensor-to-scalar ratio $r$. In practice, we work with an $α$-attractor $T$-model and vary its characteristic scale $μ$, keeping the initial inhomogeneities in both gradient and kinetic fields of order unity of the inflationary energy scale. Under these conditions, and assuming 100 e-folds for the homogeneous solution, the requirement for 60 e-folds of inflation occurs at a critical characteristic scale $μ_{crit} \approx 0.02m_{P}$, corresponding to an $r_{crit} \approx 10^{-6}$. Since increasing the amplitude of the inhomogeneities will make inflation less robust and hence require a higher characteristic scale in order for inflation to succeed, for a given number of e-folds achieved by the homogeneous solution $r_{crit}$ is a lower bound.</div>
+            </article>
 
             <article class="paper">
                 <div class="paper-date">11 December 2025</div>
