--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@
     <div class="container">
         <div class="header">
             <h1>Numerical Relativity Papers</h1>
-            <div class="last-updated">Last updated: 2026-02-10 17:02:01 UTC</div>
+            <div class="last-updated">Last updated: 2026-02-10 17:16:55 UTC</div>
         </div>
         
         <main>
@@ -467,7 +467,7 @@
         <footer class="footer">
             <p>
                 Generated automatically from arXiv.org • 
-                <a href="https://github.com/robynlm/UKNR_papers" class="github-link" target="_blank" rel="noopener">
+                <a href="https://github.com/UKNumericalRelativity/UKNR_papers" class="github-link" target="_blank" rel="noopener">
                     View on GitHub
                 </a>
             </p>
