Speedup html rendering

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         }
     };
     </script>
-    <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
+    <link rel="icon" href="data:,">
     <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
     <style>
         :root {
@@ -292,7 +292,7 @@
     <div class="container">
         <div class="header">
             <h1>Numerical Relativity Papers</h1>
-            <div class="last-updated">Last updated: 2026-02-10 17:21:53 UTC</div>
+            <div class="last-updated">Last updated: 2026-02-10 18:49:07 UTC</div>
         </div>
         
         <main>
@@ -496,7 +496,7 @@
             });
             
             // Initial MathJax processing for titles that are already visible
-            if (window.MathJax) {
+            if (window.MathJax && MathJax.startup && MathJax.startup.promise) {
                 MathJax.typesetPromise().catch(function (err) {
                     console.log('Initial MathJax typeset failed: ' + err.message);
                 });
